added ReDoc documentation generated from the swagger.json
