# generated/app/controllers.go
@@ -165,6 +165,59 @@ func unmarshalUpdateAssetPayload(ctx context.Context, service *goa.Service, req 
 	return nil
 }
 
+// DocumentationController is the controller interface for the Documentation actions.
+type DocumentationController interface {
+	goa.Muxer
+	Show(*ShowDocumentationContext) error
+}
+
+// MountDocumentationController "mounts" a Documentation resource controller on the given service.
+func MountDocumentationController(service *goa.Service, ctrl DocumentationController) {
+	initService(service)
+	var h goa.Handler
+	service.Mux.Handle("OPTIONS", "/docs", ctrl.MuxHandler("preflight", handleDocumentationOrigin(cors.HandlePreflight()), nil))
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		// Check if there was an error loading the request
+		if err := goa.ContextError(ctx); err != nil {
+			return err
+		}
+		// Build the context
+		rctx, err := NewShowDocumentationContext(ctx, req, service)
+		if err != nil {
+			return err
+		}
+		return ctrl.Show(rctx)
+	}
+	h = handleDocumentationOrigin(h)
+	service.Mux.Handle("GET", "/docs", ctrl.MuxHandler("show", h, nil))
+	service.LogInfo("mount", "ctrl", "Documentation", "action", "Show", "route", "GET /docs")
+}
+
+// handleDocumentationOrigin applies the CORS response headers corresponding to the origin.
+func handleDocumentationOrigin(h goa.Handler) goa.Handler {
+
+	return func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		origin := req.Header.Get("Origin")
+		if origin == "" {
+			// Not a CORS request
+			return h(ctx, rw, req)
+		}
+		if cors.MatchOrigin(origin, "*") {
+			ctx = goa.WithLogContext(ctx, "origin", origin)
+			rw.Header().Set("Access-Control-Allow-Origin", origin)
+			rw.Header().Set("Access-Control-Allow-Credentials", "false")
+			if acrm := req.Header.Get("Access-Control-Request-Method"); acrm != "" {
+				// We are handling a preflight request
+				rw.Header().Set("Access-Control-Allow-Methods", "GET")
+			}
+			return h(ctx, rw, req)
+		}
+
+		return h(ctx, rw, req)
+	}
+}
+
 // StatusController is the controller interface for the Status actions.
 type StatusController interface {
 	goa.Muxer
